# vst

./: .gitignore  Cargo.toml  TODO.md
apps/api/: README.md  package-lock.json  package.json
apps/api/db/: README.md
apps/api/db/migrations/: 0001_init.sql
apps/api/db/seeds/: seed_test_data.sql
apps/api/src/: server.js
apps/api/tests/: smoke.sh
apps/web/: README.md  package.json
apps/web/public/: app.js  cancel.html  index.html  styles.css  success.html
apps/web/src/: server.js
docs/: COMMERCE_BACKLOG.md  COMMERCE_DEV_RUNBOOK.md  COMMERCE_PLAN.md  DESIGN.md  DESIGN_SYSTEM.md  DISTRIBUTION_AND_INSTALLATION_GUIDE.md  FigJUCE_PRD_v1.0.docx  GDX_06_SMOKE_TEST_REPORT.md  GENX_DELAY_GUI_DESIGN.md  GENX_DELAY_ICON_INTEGRATION_PLAN.md  GENX_DELAY_MVP_KANBAN.md  HOSTING.md  IMPLEMENTATION_PLAN.md  MARKETPLACE_PLAN.md  MODE_CLASSIFIER_DESIGN.md  VST_GUI_DEVELOPMENT_STANDARDS.md  figma-juce-workflow-guide.md
infra/docker/: .env.example  README.md  docker-compose.yml
infra/docker/scripts/: db-migrate.sh  db-reset.sh  db-seed.sh  down.sh  logs.sh  stripe-setup-test-mode.sh  up.sh
m4l/: Key Detector.amxd
plugins/genx_delay/: CMakeLists.txt  Cargo.toml  build.sh
plugins/genx_delay/assets/icons/: README.md
plugins/genx_delay/docs/: PRD.md
plugins/genx_delay/src/: DelayLine.cpp  Ducker.cpp  Ducker.h  Filters.cpp  Filters.h  Modulation.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Saturation.h  delay_line.rs  ducker.rs  editor.rs  filters.rs  lib.rs  modulation.rs  reverse_delay.rs  saturation.rs
plugins/genx_delay_j/: CMakeLists.txt  README.md  build.sh
plugins/genx_delay_j/docs/: PRD.md  PROGRESS.md  figma-to-juce-guide.md
plugins/genx_delay_j/src/: DelayLine.h  Modulation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Saturation.cpp
plugins/highpass_filter/: Cargo.toml
plugins/highpass_filter/src/: filter.rs  lib.rs
plugins/key_detector/: Cargo.toml
plugins/key_detector/src/: editor.rs  lib.rs  profiles.rs  ring_buffer.rs
plugins/key_detector/src/analyzer/: chroma.rs  fft.rs  key_detect.rs  mod.rs
plugins/template/: CMakeLists.txt  build.sh
plugins/template/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/: lib.rs
