[package]
name = "key_detector"
version = "0.1.0"
edition = "2021"
authors = ["trwolf"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
realfft = "3.4"
num-complex = "0.4"
